--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="pt-Br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>site everton</title>
+</head>
+<body>
+    <h1>criando um site</h1>
+    <p>..........</p>
+    <img src="hollow knight.image.webp" alt="linguagens da programação">
+</body>
+</html>
