--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site everton</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>criando um site</h1>
-    <p>..........</p>
-    <img src="hollow knight.image.webp" alt="linguagens da programação">
+    <p>falando sobre python</p>
+    <img src="livros-2.jpg" alt="livros">
+    <ul>
+        <li>o gato preto; escritor:edgar allan poe</li>
+        <li>pequeno principe; escritor:Antoine de Saint-Exupéry</li>
+        <li>o principe; escritor:nicolau maquiavel</li>
+        <li>o rei de amarelo; Robert W. Chambers</li>
+    </ul>
 </body>
 </html>
