--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
         <li>o principe; escritor:nicolau maquiavel</li>
         <li>o rei de amarelo; Robert W. Chambers</li>
     </ul>
+<button>play</button>
+
 </body>
 </html>
