--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <li>o principe; escritor:nicolau maquiavel</li>
         <li>o rei de amarelo; Robert W. Chambers</li>
     </ul>
-<button>play</button>
+<h1> precisa de ajuda para escolher um livro?</h1>
+
+<button>sim</button>
+<button>não</button>
+
 
 </body>
 </html>
